name:                heimdall
version:             0.1.0.0
build-type:          Simple
cabal-version:       >= 1.10

executable heimdall
  main-is:             app/Main.hs
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite heimdall-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  build-depends:       base >= 4.7 && < 5
                     , heimdall
                     , hspec
  default-language:    Haskell2010
